# helpscout-mailbox

./: .flake8  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: docs.yml  publish.yml  test.yml
.omc/state/: hud-stdin-cache.json
.omc/state/sessions/49b74969-8070-4e1f-93d6-2a32cccecedf/: hud-state.json
src/helpscout_mailbox/: __init__.py  client.py
tests/: __init__.py  test_client.py
